objects/Standard__c.object
<CustomObject>
    <fields>
        <fullName>Attribute__c</fullName>
        <description>School has option of editing Attributes for their school.  Default picklist values are aligned to the Common Core of (Major, Minor, Anchor, Supporting, Additional).  Each school could modify these picklists values as needed, and upload their standards with specific Attributes.  If a school decides not to have any values, the default option of “All” will be presented.  The Attribute Field is visible on the “Create Assignment” page as a searchable field when initially searching for standards (you can see this now).  It will also be visible in the pop up box when selecting standards to grade.  Lastly, this field is available in the Advanced Analytics as a searchable field.</description>
        <inlineHelpText>Customizable option to categorize standards.  Defaults align with Common Core and are visible on the &quot;Create Assignment&quot; page when selecting standards to grade and in the Gradebook Advanced Analytics as a searchable field.</inlineHelpText>
        <label>Attribute</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Major</fullName>
                </value>
                <value>
                    <fullName>Minor</fullName>
                </value>
                <value>
                    <fullName>Anchor</fullName>
                </value>
                <value>
                    <fullName>Supporting</fullName>
                </value>
                <value>
                    <fullName>Additional</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Citywide_Instructional_Expectation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This determines if the standard is part of the &quot;Citywide Instructional Expectations&quot; set of standards</description>
        <inlineHelpText>This determines if the standard is part of the &quot;Citywide Instructional Expectations&quot; set of standards</inlineHelpText>
        <label>Citywide Instructional Expectation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Course__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not required.  A standard can be associated with 1 course (only 1, not many).  The Course is not visible when searching for standards in the Gradebook.</inlineHelpText>
        <label>Course</label>
        <referenceTo>Course__c</referenceTo>
        <relationshipLabel>Standards</relationshipLabel>
        <relationshipName>Standards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Optional field that displays on Standard Record. Not available when searching for standards to grade.</inlineHelpText>
        <label>Department</label>
        <referenceTo>Standard__c</referenceTo>
        <relationshipLabel>Standards (Department)</relationshipLabel>
        <relationshipName>Department_Standards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description_Spanish__c</fullName>
        <description>The strand and standard description in Spanish language</description>
        <inlineHelpText>The strand and standard description in Spanish</inlineHelpText>
        <label>Description in Spanish</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Grade_Level_Text__c</fullName>
        <label>Grade Level Text</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grade_Level__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Grade Level</label>
        <referenceTo>Standard__c</referenceTo>
        <relationshipLabel>Standards (Grade Level)</relationshipLabel>
        <relationshipName>Grade_Level_Standards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Identifier__c</fullName>
        <inlineHelpText>Specific standard or strand Identifier; for example 1.ELA.L.1a.  This is displayed when searching for Standards when creating an Assignment</inlineHelpText>
        <label>Identifier</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <inlineHelpText>This  field displays when searching for standards on an Assignment and can be used in a variety of ways pending school&apos;s approach.</inlineHelpText>
        <label>Level</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Long_Text__c</fullName>
        <inlineHelpText>Long text description of the standard that displays in the hover over in the Gradebook and on Portal/PGV. Max of 32,000 characters to describe the Standard.</inlineHelpText>
        <label>Long Text</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Parent_Standard__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Indicates if a standard hierarchy is present and what the parent standard is</inlineHelpText>
        <label>Parent Standard</label>
        <referenceTo>Standard__c</referenceTo>
        <relationshipLabel>Standards</relationshipLabel>
        <relationshipName>Standards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reference_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Reference Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>School__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is a lookup field for standards that are school-specific</description>
        <inlineHelpText>This is a lookup field for standards that are school-specific</inlineHelpText>
        <label>School</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Standards</relationshipLabel>
        <relationshipName>Standards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Standard_Subject__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This is the “Subject” that all standards and strands look up to.   Standard/Strand grades are presented on Report Cards and Progress Reports under the specific “Subject.”  Subjects can be imported. NOTE: This is a different field that the “Course Subjec</inlineHelpText>
        <label>Standard Subject</label>
        <referenceTo>Standard__c</referenceTo>
        <relationshipLabel>Standards (Standard Subject)</relationshipLabel>
        <relationshipName>Subject_Standards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Strand__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Indicates if a standard looks up to a Strand.  Strand grades are only calculated for the Standards-Only Gradebook.</inlineHelpText>
        <label>Strand</label>
        <referenceTo>Standard__c</referenceTo>
        <relationshipLabel>Standards (Strand)</relationshipLabel>
        <relationshipName>Strands</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <inlineHelpText>retired field</inlineHelpText>
        <label>Subject</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Standard</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Course__c</columns>
        <columns>Subject__c</columns>
        <columns>Strand__c</columns>
        <columns>Long_Text__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>Grade_Level__c</columns>
        <columns>Grade_Level_Text__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Standard Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Standards</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>