objects/Standard__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Course__c</columns>
    <columns>Subject__c</columns>
    <columns>Strand__c</columns>
    <columns>Long_Text__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>Grade_Level__c</columns>
    <columns>Grade_Level_Text__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>